@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-07-26T00:40:43Z",
-  "count_outdated" : 4407,
-  "uniques_outdated" : 2157,
+  "timestamp" : "2024-07-27T00:40:37Z",
+  "count_outdated" : 4408,
+  "uniques_outdated" : 2158,
   "count" : 4412,
   "uniques" : 2162,
   "clones" : [
-    {
-      "timestamp": "2024-07-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-07-18T00:00:00Z",
       "count": 2,
